<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_alpha"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_oval"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/txt_alpha"
            android:textColor="@color/colorRed"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/txt_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"

                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:lines="1"
                android:text="@string/txt_phone_contact"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</layout>