<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/txt_welcome"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/txt_intro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@color/colorGray_200"
            android:elevation="1dp"
            android:src="@mipmap/ic_person"
            app:layout_constraintBottom_toBottomOf="@+id/tv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_intro"
            app:shapeAppearanceOverlay="@style/Circular"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/view_login"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/bg_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_intro" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/view_login"
            app:layout_constraintTop_toTopOf="@id/view_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorGray_200"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorGray_200"
            app:helperTextEnabled="true"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            app:prefixText="+84"
            app:prefixTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/colorGray_200">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableTint="@color/colorGray_200"
                android:hint="@string/txt_phone"
                android:inputType="text"
                android:maxLength="11"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorGray_200"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_username"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGray_200"
            app:startIconDrawable="@drawable/ic_key"
            app:startIconTint="@color/colorGray_200">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:text="@string/txt_remember_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/edt_pass"
            app:layout_constraintTop_toBottomOf="@id/edt_pass" />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_forgot_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/view_login"
            app:layout_constraintStart_toStartOf="@+id/view_login"
            app:layout_constraintTop_toBottomOf="@id/view_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_rounded"
            android:text="@string/txt_login"
            app:layout_constraintEnd_toEndOf="@id/view_login"
            app:layout_constraintStart_toStartOf="@id/view_login"
            app:layout_constraintTop_toBottomOf="@id/cb_remember" />

        <TextView
            android:id="@+id/tv_dont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_dont_have"
            android:textColor="@color/colorGray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_res"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_join_now"
            android:textColor="@color/colorBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_dont" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>