<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite_100"
        android:orientation="vertical">

        <ImageView
            android:padding="5dp"
            android:id="@+id/ic_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="11dp"
            android:src="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_danh_ba"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TableRow
                android:id="@+id/tr_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded"
                android:backgroundTint="@color/colorRed"
                android:gravity="center"
                android:paddingHorizontal="6dp"
                android:paddingVertical="3dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_sync"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:text="@string/txt_sync"
                    android:textColor="@color/white"
                    tools:ignore="RtlSymmetry" />
            </TableRow>
        </TableRow>

        <EditText
            android:id="@+id/edt_search_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="TODO"
            android:background="@drawable/bg_search"
            android:cursorVisible="true"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorGray"
            android:hint="@string/txt_search"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            tools:listitem="@layout/item_contact" />
    </LinearLayout>
</layout>